@@ -9,6 +9,9 @@ cdbs (0.4.50) UNRELEASED; urgency=low
     (python-distutils.mk) (closes: #377964)
   * Use dh_testroot instead of custom rule when debhelper is used
     (buildcore.mk) (closes: #416018)
+  * Documented variables DEB_AUTO_UPDATE_AUTOCONF, DEB_AUTO_UPDATE_AUTOMAKE,
+    DEB_AUTO_UPDATE_LIBTOOL; thanks to Steve M. Robbins for the research
+    (closes: #439750)
 
  -- Peter Eisentraut <petere@debian.org>  Mon, 13 Aug 2007 19:10:56 +0200
 
